--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,12 +2,43 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2013-08-18 20:26:49 -0500 
+%% Created for Evan Bollig at 2013-08-29 23:55:38 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{Purcell2003,
+	Author = {Timothy J. Purcell and Craig Donner and Mike Cammarano and Henrik Wann Jensen and Pat Hanrahan},
+	Booktitle = {Proceedings of the ACM SIGGRAPH/EUROGRAPHICS Conference on Graphics Hardware},
+	Date-Added = {2013-08-30 04:54:42 +0000},
+	Date-Modified = {2013-08-30 04:54:49 +0000},
+	Isbn = {1-58113-739-7},
+	Location = {San Diego, California},
+	Pages = {41--50},
+	Publisher = {Eurographics Association},
+	Title = {Photon Mapping on Programmable Graphics Hardware},
+	Year = {2003}}
+
+@misc{Green2010,
+	Author = {S. Green},
+	Date-Added = {2013-08-30 04:49:45 +0000},
+	Date-Modified = {2013-08-30 04:51:23 +0000},
+	Howpublished = {NVidia Whitepaper},
+	Number = {1.3},
+	Title = {Cuda particles},
+	Year = {2010}}
+
+@mastersthesis{Johnson2011,
+	Author = {I. Johnson},
+	Date-Added = {2013-08-30 04:39:52 +0000},
+	Date-Modified = {2013-08-30 04:48:31 +0000},
+	Howpublished = {\emph{Electronic Theses, Treatises and Dissertations}. Paper 4931. },
+	Month = {November},
+	School = {Florida State University},
+	Title = {Real-Time Particle Systems in the Blender Game Engine},
+	Year = {2011}}
 
 @article{Friedman1977,
 	Acmid = {355745},
@@ -195,14 +226,14 @@ work. A list of this and other possible avenues for future work is also included
 @article{BolligFlyerErlebacher2012,
 	Author = {Evan F. Bollig and Natasha Flyer and Gordon Erlebacher},
 	Date-Added = {2013-08-09 08:30:08 +0000},
-	Date-Modified = {2013-08-09 08:30:17 +0000},
+	Date-Modified = {2013-08-30 04:55:38 +0000},
 	Doi = {http://dx.doi.org/10.1016/j.jcp.2012.06.030},
 	Issn = {0021-9991},
 	Journal = {Journal of Computational Physics},
 	Keywords = {OpenCL},
 	Number = {21},
 	Pages = {7133 - 7151},
-	Title = {Solution to \{PDEs\} using radial basis function finite-differences (RBF-FD) on multiple \{GPUs\}},
+	Title = {Solution to {PDEs} using radial basis function finite-differences (RBF-FD) on multiple {GPUs}},
 	Url = {http://www.sciencedirect.com/science/article/pii/S0021999112003452},
 	Volume = {231},
 	Year = {2012},
