--- a/latex/ordering_and_preconditioning.tex
+++ b/latex/ordering_and_preconditioning.tex
@@ -141,7 +141,7 @@ RBF-FD only needs to generate stencils once, so the overall time for the step su
 
 While a $k$-D Tree functions well for queries, the cost to build the tree structure is unnecessary overhead. Among the many data-structures that exist for nearest neighbor queries, alternatives like fixed-grid methods \cite{Samet2005,Wendland2002,WendlandBook} (a.k.a. uniform grid \cite{Krog2010,Purcell2003}) bypass much of the cost in construction with an assumption that only lower spatial dimensions (e.g., 2-D or 3-D) are significant. This discards the need to build a tree and shifts the focus onto performing the nearest neighbor queries. 
 
-Fixed-grid methods get their name from a coarse 2-D or 3-D regular grid that is overlaid on the domain. The $d$-dimensional grid divides the domain's axis aligned bounding box (AABB)---that is, the minimum bounding box containing the entire domain---into $(h_n)^d$ cells. Subdivisions are uniform, so one can easily identify cell containing any sample point, $p$, based on the spatial coordinates of $p$ and the coordinates of the AABB. For example, let $(c_x, c_y, c_z)$ be the desired coordinates of the containing cell in 3-D, and $(x_{min}, y_{min}, z_{min})$ and $(x_{max}, y_{max}, z_{max})$ be the minimum and maximum coordinates of the AABB (resp.). Then the coordinates of the containing cell are given by:  
+Fixed-grid methods get their name from a coarse 2-D or 3-D regular grid that is overlaid on the domain. The $d$-dimensional grid divides the domain's axis aligned bounding box (AABB)---that is, the minimum bounding box containing the entire domain with edges parallel to axes---into $(h_n)^d$ cells. Subdivisions are uniform, so one can easily identify the cell containing any sample point, $p$, given the spatial coordinates of $p$ and the coordinates of the AABB. For example, let $(c_x, c_y, c_z)$ be the desired coordinates of the containing cell in 3-D, and $(x_{min}, y_{min}, z_{min})$ and $(x_{max}, y_{max}, z_{max})$ be the minimum and maximum coordinates of the AABB (resp.). Then the coordinates of the containing cell are given by:  
 \begin{align}
 (dx, dy, dz) & = \left(\frac{(x_{max} - x_{min})}{h_n}, \frac{(y_{max} - y_{min})}{h_n}, \frac{(z_{max} - z_{min})}{h_n}\right) \nonumber \\
 (c_x, c_y, c_z) & = \left(\left\lfloor\frac{(p_x - x_{min})}{dx}\right\rfloor , \left\lfloor\frac{(p_y - y_{min})}{dy}\right\rfloor , \left\lfloor\frac{(p_z - z_{min})}{dz}\right\rfloor \right).
@@ -159,10 +159,58 @@ At a high level, fixed-grid methods have the following preprocessing steps \cite
 \item For each node, use the cell coordinates as input to a spatial hash function (space-filling curve).
 \item Sort the nodes according to their spatial hash.
 \end{enumerate}
-A spatial hash function 
-Particular details of how nodes are sorted, the spatial hash function, etc. determine the specific class of fixed-grid method and corresponding complexity. A comprehensive list of options and classifications can be found in \cite{Samet2005}.
+Particular details of how nodes are sorted, the choice of hashing function, etc. determine the specific class of fixed-grid method and corresponding complexity. A comprehensive list of options and classifications can be found in \cite{Samet2005}.
 
-The approach taken in this work is inspired by fixed-grid approaches for GPU particle simulations \cite{Krog2010,Green2010,Johnson2012}. Particle methods require a ball query at each time-step. With time-steps often dominated by the cost of querying neighbors, the community understandably devotes significant effort to finding the most efficient algorithms possible. The fixed-grid method is favored for at least two reasons: a) by bypassing the need to build a tree, half the cost in querying neighbors is avoided; and b) nodes sorted according to a space filling curve are typically closer in memory to their neighbors, resulting in a higher likelihood that data for neighbor nodes will be cached when required. 
+The approach in this work is inspired by fixed-grid approaches for GPU particle simulations \cite{Krog2010,Green2010,Johnson2011}. Particle methods require a ball query at each time-step. With time-steps often dominated by the cost of querying neighbors, the community understandably devotes significant effort to finding the most efficient algorithms possible. The fixed-grid method is favored for at least two reasons: a) by bypassing the need to build a tree, half the cost in querying neighbors is avoided; and b) nodes sorted according to a space filling curve are typically closer in memory to their neighbors, resulting in a higher likelihood that data for neighbor nodes will be cached when required. 
+
+Spatial hash functions %TODO: introduce spatial hash functions. What are they? why are they beneficial
+
+\begin{algorithm} 
+\caption{BuildFixedGrid($P$, $h_n$)}         
+\label{alg:fixed_grid}  
+\begin{algorithmic}[1]    
+    \State \textbf{Input:} A set of $d$-dimensional points $P$, and the desired resolution of the overlay grid, $hnx$.
+    \State \textbf{Output:} The sorted set of points $\hat{P}$.
+    \State
+    \State Create $Q$: an $(h_n)^d$ array of empty vectors. 
+    \For{point $p_i$ in $P$}
+       \State $c := \text{CellCoords}(p_i)$ 
+       \State $ind := \text{SpatialHash}(c)$
+       \State Append $i$ to $Q[ind]$
+    \EndFor
+    \For{each $Q[j]$, $j=0,1,...,(h_n)^d$}
+    \If{$Q[j]$ is not empty}
+        \State Append $P[Q[j]]$ to $\hat{P}$
+        \State Overwrite $Q[j]$ with new indices in $\hat{P}$ 
+    \EndIf
+    \EndFor
+    \State \Return $\hat{P}$, $Q$
+    \end{algorithmic}
+\end{algorithm}
+
+
+\begin{algorithm} 
+\caption{QueryFixedGrid($\hat{P}$, $Q$, $h_n$)}         
+\label{alg:fixed_grid}  
+\begin{algorithmic}[1]    
+    \State \textbf{Input:} A set of $d$-dimensional points $P$, and the desired resolution of the overlay grid, $hnx$.
+    \State \textbf{Output:} The sorted set of points $\hat{P}$.
+    \State Get $min$ and $max$ coordinates from $P$
+    \State Create a vector of $(h_n)^d$ empty vectors, $Q$. 
+    \For{point $p_i$ in $P$}
+       \State $c := \text{CellCoords}(p_i)$ 
+       \State $ind := \text{SpatialHash}(c)$
+       \State Append $i$ to $Q[ind]$
+    \EndFor
+    \For{each $Q[j]$, $j=0,1,...,(h_n)^d$}
+    \If{$Q[j]$ is not empty}
+        \State Append all (unsorted) nodes in $P[Q[j]]$ to $\hat{P}$
+        \State Overwrite $Q[j]$ with new indices from $\hat{P}$ 
+    \EndIf
+    \EndFor
+    \State \Return $\hat{P}$, $Q$
+    \end{algorithmic}
+\end{algorithm}
 
 
 
@@ -171,7 +219,7 @@ The approach taken in this work is inspired by fixed-grid approaches for GPU par
 
 
 
-\subsecton{Performance} 
+\subsection{Performance} 
 
 %TODO: move down
 Although RBF-FD only requires neighbor queries once, the results that follow reveal a long lasting positive impact on memory with a fixed-grid method, which is sufficient to justify its use. Investigations into moving node coordinates and/or local refinements for RBF methods (e.g., \cite{FlyerLehto10}) would find the fixed-grid method significantly more beneficial. As of this writing no known applications of RBF-FD consider moving nodes
@@ -181,7 +229,6 @@ Due to the limited significance of stencil generation under RBF-FD, the overhead
     
 \cite{Krog2010} assumes that at each time-step a new virtual fixed grid is generated 
 
-The fixed-grid method is not entirely new to the RBF community. Wendland applied a variant to a Partition of Unity method based on compact RBFs in \cite{Wendland2002}. The approach taken here 
 
 Implementations of fixed-grid often assume that no more than two nodes reside in any one cell.  
 
@@ -244,44 +291,6 @@ Avoids construction with overlaid grid of known cell indices.
 
 
 The fixed-grid method 
-
-\begin{algorithm} 
-\caption{BuildFixedGrid($P$,$h_n$)}         
-\label{alg:fixed_grid}  
-\begin{algorithmic}[1]    
-    \State \textbf{Input:} A set of $d$-dimensional points $P$, and the desired resolution of the overlay grid, $hnx$.
-    \State \textbf{Output:} The sorted set of points $\hat{P}$.
-    \State Get $min$ and $max$ coordinates from $P$
-    \For{Point $p$ in $P$}
-       \State $c = (max - min) ./ hnx$ 
-       \State $cell = ((c_x * hnx) + cy) * hnx + cz$
-    \EndFor
-%    std::vector< std::vector<unsigned int> > cell_hash(hnx*hny*hnz);//, (unsigned int)0); 
-%    // list of lists 
-%//    cell_hash.resize(hnx * hny * hnz);  
-%
-%    double cdx = (xmax - xmin) / hnx;
-%    //double cdx = (hnx > 1) ? (xmax - xmin) / (hnx - 1.) : (xmax - xmin) / hnx;
-%    double cdy = (ymax - ymin) / hny;
-%    double cdz = (zmax - zmin) / hnz;
-%
-%    NodeType cell_start(xmin, ymin, zmin);
-%    NodeType cell_end(xmax, ymax, zmax);
-%
-%    // We'll sort our nodes according to hash (roughly sorted), to try to improve caching
-%    std::vector<NodeType> hash_sorted_nodes(nb_nodes);
-%
-%    // Foreach node: 
-%    //     determine hashid (cellid)
-%    //          node(x,y,z) exists in cellid((x-xmin)/dx, (y-ymin)/dy, (z-zmin)/dz)
-%    //          linearize cellid(xc, yc, zc) = ((xc*NY) + yc)*NZ + zc
-%    //          append node to list contained in list[cellid]
-%    for (unsigned int i = 0; i < this->nb_nodes; i++) {
-%        NodeType node = this->getNode(i);
-%
-%        
-    \end{algorithmic}
-\end{algorithm}
 
 
 An implementation of the method used in \cite{Wendland2002}, discussed in \cite{WendlandBook} and 
@@ -387,12 +396,6 @@ Alternative queries are possible: ball query and approximate nearest neighbor. T
 \end{figure} 
 
 \cite{Samet2005} labels this type of algorithm as a \emph{fixed grid bucket algorithm} with the twist that it also has \emph{one dimensional ordering}
-\begin{itemize} 
-\item Algorithm to hash each node, push onto queue for each hash, sort by hash
-\item Query by jumping to hash, building raster spheres
-\item Need a good handle on the complexity. 
-\item possibility to use space filling curves
-\end{itemize}
 
 
 
