--- a/latex/dedication.tex
+++ b/latex/dedication.tex
@@ -1,1 +1,1 @@
-To the one who taught me patience, determination, and unwavering . Thank you. 
+To the one who taught me patience, determination, and unwavering 
