--- a/latex/karen.tex
+++ b/latex/karen.tex
@@ -30,8 +30,8 @@
 \maketitle
 \makecommitteepage
 %%
-\include{dedication}
-\include{acknowledgments}
+%\include{dedication}
+%\include{acknowledgments}
 %%
 \tableofcontents
 \listoftables
