--- a/latex/ordering_and_preconditioning.tex
+++ b/latex/ordering_and_preconditioning.tex
@@ -147,7 +147,7 @@ Fixed-grid methods get their name from a coarse 2-D or 3-D regular grid that is 
 (c_x, c_y, c_z) & = \left(\left\lfloor\frac{(p_x - x_{min})}{dx}\right\rfloor , \left\lfloor\frac{(p_y - y_{min})}{dy}\right\rfloor , \left\lfloor\frac{(p_z - z_{min})}{dz}\right\rfloor \right).
 \label{eq:cell_hash}
 \end{align}
-Cells neighboring $(c_x, c_y, c_z)$ are trivial to find by adding offsets to each coordinate. Note that the fixed-grid is virtual. Nodes are matched with cell coordinates, but the full grid is never explicitly constructed.
+Cells neighboring $(c_x, c_y, c_z)$ are trivial to find by adding positive and negative offsets to each coordinate. Note that the fixed-grid in the fixed-grid method is virtual. Nodes are matched with cell coordinates, but the full grid is never explicitly constructed.
 
 
 \subsection{Construction}
@@ -161,9 +161,9 @@ At a high level, fixed-grid methods have the following preprocessing steps \cite
 \end{enumerate}
 Particular details of how nodes are sorted, the choice of hashing function, etc. determine the specific class of fixed-grid method and corresponding complexity. A comprehensive list of options and classifications can be found in \cite{Samet2005}.
 
-The approach in this work is inspired by fixed-grid approaches for GPU particle simulations \cite{Krog2010,Green2010,Johnson2011}. Particle methods require a ball query at each time-step. With time-steps often dominated by the cost of querying neighbors, the community understandably devotes significant effort to finding the most efficient algorithms possible. The fixed-grid method is favored for at least two reasons: a) by bypassing the need to build a tree, half the cost in querying neighbors is avoided; and b) nodes sorted according to a space filling curve are typically closer in memory to their neighbors, resulting in a higher likelihood that data will be cached when required. 
+The approach in this work is inspired by fixed-grid approaches for GPU particle simulations \cite{Krog2010,Green2010,Johnson2011}. Particle methods require a ball query at each time-step. With time-steps often dominated by the cost of querying neighbors, the community understandably devotes significant effort to finding the most efficient algorithms possible. The fixed-grid method is competitive for at least two reasons: a) by bypassing the need to build a tree, half the cost in querying neighbors is avoided; and b) nodes sorted according to a space filling curve are typically closer in memory to their neighbors, resulting in a higher likelihood that data will be cached when required. 
 
-For now we assume the cell hash function is the standard Raster or $ijk$-ordering (with $k$ varying fastest): $ind = ((h_n * c_x) + c_y) * h_n + c_z$.
+For now the spatial hash in hash function is the standard Raster- or $ijk$-ordering (with $k$ varying fastest): $ind = ((c_x * d_x) + c_y) * d_y + c_z$.
 
 
 The choice of spatial hash function certainly impacts memory access patterns. Example space filling curves are presented in Figure~\ref{fig:space_filling_curves}
@@ -194,6 +194,9 @@ The choice of spatial hash function certainly impacts memory access patterns. Ex
 \end{algorithm}
 
 
+
+\subsection{$k$-NN with Fixed-Grid}
+
 \begin{algorithm} 
 \caption{QueryFixedGrid($\hat{P}$, $Q$, $h_n$)}         
 \label{alg:fixed_grid}  
@@ -216,11 +219,6 @@ The choice of spatial hash function certainly impacts memory access patterns. Ex
     \State \Return $\hat{P}$, $Q$
     \end{algorithmic}
 \end{algorithm}
-
-
-
-\subsection{$k$-NN with Fixed-Grid}
-
 
 
 
