--- a/latex/ordering_and_preconditioning.tex
+++ b/latex/ordering_and_preconditioning.tex
@@ -139,15 +139,24 @@ RBF-FD only needs to generate stencils once, so the overall time for the step su
 
 \section{A Fixed-Grid Hashing Algorithm}
 
-While a $k$-D Tree functions well for queries, the cost to build the tree structure is unnecessary overhead. Among the many data-structures that exist for nearest neighbor queries, alternatives like fixed-grid methods \cite{Samet2005,Wendland2002,WendlandBook} (a.k.a. uniform grid \cite{Krog2010,Green2010}) bypass much of the cost in construction with an assumption that only lower spatial dimensions (e.g., 2-D or 3-D) are significant. This discards the need to build a tree and shifts the focus onto performing the nearest neighbor queries. 
+While a $k$-D Tree functions well for queries, the cost to build the tree structure is unnecessary overhead. Among the many data-structures that exist for nearest neighbor queries, alternatives like fixed-grid methods \cite{Samet2005,Wendland2002,WendlandBook} (a.k.a. uniform grid \cite{Krog2010,Green2010}) bypass much of the cost in construction with an assumption that only lower spatial dimensions (e.g., 2-D or 3-D) are significant. This discards the need to build a tree and shifts focus onto querying neighbors. 
 
-Fixed-grid methods get their name from a coarse 2-D or 3-D regular grid that is overlaid on the domain. The $d$-dimensional grid divides the domain's axis aligned bounding box (AABB)---that is, the minimum bounding box containing the entire domain with edges parallel to axes---into $(h_n)^d$ cells. Subdivisions are uniform, so one can easily identify the cell containing any sample point, $p$, given the spatial coordinates of $p$ and the coordinates of the AABB. For example, let $(c_x, c_y, c_z)$ be the desired coordinates of the containing cell in 3-D, and $(x_{min}, y_{min}, z_{min})$ and $(x_{max}, y_{max}, z_{max})$ be the minimum and maximum coordinates of the AABB (resp.). Then the coordinates of the containing cell are given by:  
+Fixed-grid methods get their name from a coarse 2-D or 3-D regular grid that is overlaid on the domain. The $d$-dimensional grid divides the domain's axis aligned bounding box (AABB)---that is, the minimum bounding box containing the entire domain with edges parallel to axes---into $(h_n)^d$ cells. Subdivisions are uniform, so one can easily identify the cell containing any sample point, $p$, given the coordinates of the AABB and $(h_n)^d$. For example, let $(c_x, c_y, c_z)$ be the desired containing cell in 3-D, and $(x_{min}, y_{min}, z_{min})$ and $(x_{max}, y_{max}, z_{max})$ be the minimum and maximum coordinates of the AABB (resp.). Then the cell coordinates are found by:  
 \begin{align}
 (dx, dy, dz) & = \left(\frac{(x_{max} - x_{min})}{h_n}, \frac{(y_{max} - y_{min})}{h_n}, \frac{(z_{max} - z_{min})}{h_n}\right) \nonumber \\
 (c_x, c_y, c_z) & = \left(\left\lfloor\frac{(p_x - x_{min})}{dx}\right\rfloor , \left\lfloor\frac{(p_y - y_{min})}{dy}\right\rfloor , \left\lfloor\frac{(p_z - z_{min})}{dz}\right\rfloor \right).
 \label{eq:cell_hash}
 \end{align}
 Cells neighboring $(c_x, c_y, c_z)$ are trivial to find by adding positive and negative offsets to each coordinate. Note that the fixed-grid in the fixed-grid method is virtual. Nodes are matched with cell coordinates, but the full grid is never explicitly constructed.
+
+Cells of the fixed-grid are assigned a linear index based on \emph{space filling curves}. Space filling curves pass through every point in $d$-dimensional space, and through each point only once. Equivalently, space filling curves map $d$-dimensional space down to 1-D, where every point is mapped to an index or traversal order. Traversing the $d$-dimensional points based on their mappings (i.e., playing ``connect the dots") draws the space filling curve. Note that one-dimensional orderings are not unique. Figure~\ref{fig:space_filling_curves} presents two common orderings of a 2-D fixed-grid. On the left is the Raster-, Scanline- or $ijk$-ordering: $((c_x * h_n) + c_y) * h_n + c_z$. The right half of Figure~\ref{fig:space_filling_curves} shows an ordering known as Morton or $Z$-ordering. The mapped index of each cell is indicated in the bottom left corner. Traversing the cells in order results in the curves superimposed in red. 
+
+\begin{figure}
+\centering
+\includegraphics[width=0.65\textwidth]{rbffd_methods_content/neighbors/space_filling_curves.png}
+\caption{Two example space filling curves to linearize the same fixed-grid. Left: Raster-ordering ($ijk$); Right: Morton-/Z-ordering.}
+\label{fig:space_filling_curves}
+\end{figure} 
 
 
 \subsection{Construction}
@@ -159,14 +168,32 @@ At a high level, fixed-grid methods have the following preprocessing steps \cite
 \item For each node, use the cell coordinates as input to a spatial hash function (i.e., a space-filling curve).
 \item Sort the nodes according to their spatial hash.
 \end{enumerate}
-Particular details of how nodes are sorted, the choice of hashing function, etc. determine the specific class of fixed-grid method and corresponding complexity. A comprehensive list of options and classifications can be found in \cite{Samet2005}.
+Particular details of how nodes are sorted, the choice of hashing function, etc. determine the specific class of fixed-grid method and corresponding complexity. A comprehensive list of options and classifications can be found in \cite{Samet2005}. 
 
 The approach in this work is inspired by fixed-grid approaches for GPU particle simulations \cite{Krog2010,Green2010,Johnson2011}. Particle methods require a ball query at each time-step. With time-steps often dominated by the cost of querying neighbors, the community understandably devotes significant effort to finding the most efficient algorithms possible. The fixed-grid method is competitive for at least two reasons: a) by bypassing the need to build a tree, half the cost in querying neighbors is avoided; and b) nodes sorted according to a space filling curve are typically closer in memory to their neighbors, resulting in a higher likelihood that data will be cached when required. 
 
-For now the spatial hash in hash function is the standard Raster- or $ijk$-ordering (with $k$ varying fastest): $ind = ((c_x * d_x) + c_y) * d_y + c_z$.
+A space filling curve is any path 
 
 
-The choice of spatial hash function certainly impacts memory access patterns. Example space filling curves are presented in Figure~\ref{fig:space_filling_curves}
+map multidimensional data into 1-D. The curves traverse all data When used to index data, space filling curves give a variety of solutions for ordering data. 
+Given the cells of a fixed-grid, a space filling curve assigns a unique index to each cell 
+
+Example space filling curves are presented in Figure~\ref{fig:space_filling_curves}
+
+When the fixed-grid is mapped into linear memory, cell coordinates are passed through a hash function to produce a unique index for each cell. 
+ % One could just as easily use the transposed ordering, $kji$, to give priority to $x$-coordinates for FORTRAN or MATLAB.  
+Alternatively, one might use another 
+
+Space filling curves like the options shown in Figure~\ref{fig:space_filling_curves} 
+
+In what follows, 
+
+as a \emph{spatial hash function} 
+
+For now assume the spatial hash function is the standard Raster- or $ijk$-ordering (with $k$ varying fastest): $ind = ((c_x * h_n) + c_y) * h_n + c_z$. To get the coordinates of the cell, simply swap the two $h_n$ terms with $d_x$ and $d_y$. 
+
+
+The choice of spatial hash function certainly impacts memory access patterns. 
 
  %TODO: introduce spatial hash functions. What are they? why are they beneficial
 
